Add validation to UserDTORequest, rename listHosts to hosts in HotelBookingDTOResponse, and implement HotelBookingController for fetching hotel bookings